--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-lib (10.0.2-7) unstable; urgency=medium
+
+  * Create (or move) existing DHCP server for administrative DC Slaves when
+  	creating a school
+
+ -- Florian Best <best@univention.de>  Wed, 27 Sep 2017 16:22:55 +0200
+
 ucs-school-lib (10.0.2-6) unstable; urgency=low
 
   * Bug #45044: make ObjectClasses of User classes accessable
