--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-lib (9.0.33-6) unstable; urgency=medium
+
+  * Bug #45463: Create (or move) existing DHCP server for administrative
+    DC Slaves when creating a school
+
+ -- Florian Best <best@univention.de>  Wed, 27 Sep 2017 16:49:52 +0200
+
 ucs-school-lib (9.0.33-5) unstable; urgency=medium
 
   * Bug #45403: fix smbstatus parse regex
