--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-import (15.0.0-48) unstable; urgency=low
+
+  * Bug #42456: check school/ou name case sensitively before
+    create/modify/move
+
+ -- Daniel Troeder <troeder@univention.de>  Thu, 28 Sep 2017 14:50:07 +0200
+
 ucs-school-import (15.0.0-47) unstable; urgency=medium
 
   * Bug #42687: Create (or move) existing DHCP server for administrative
