--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-29) unstable; urgency=low
+
+  * Bug #42456: test import with case sensitive OU
+
+ -- Daniel Troeder <troeder@univention.de>  Thu, 28 Sep 2017 15:40:17 +0200
+
 ucs-test-ucsschool (4.0.4-28) unstable; urgency=low
 
   * Bug #42913: check LDAP bind after deactivating a user in an import
