--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-umc-exam (7.0.4-16) unstable; urgency=low
+
+  * Bug #43980: the timeout for starting new exams has been raised from 5
+    minutes to 30 minutes
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Fri, 29 Sep 2017 15:27:02 +0200
+
 ucs-school-umc-exam (7.0.4-15) unstable; urgency=low
 
   * Bug #45473: port feature ucsschool/exam/group/ldap/blacklist/regex to 4.2
