--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-30) unstable; urgency=low
+
+  * Bug #42913: test if newly imported, deactivated users cannot LDAP bind
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 02 Oct 2017 10:24:46 +0200
+
 ucs-test-ucsschool (4.0.4-29) unstable; urgency=low
 
   * Bug #42456: test import with case sensitive OU
