--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-31) unstable; urgency=medium
+
+  * Bug #45468: adapt test to changes
+
+ -- Florian Best <best@univention.de>  Thu, 05 Oct 2017 15:36:06 +0200
+
 ucs-test-ucsschool (4.0.4-30) unstable; urgency=low
 
   * Bug #42913: test if newly imported, deactivated users cannot LDAP bind
