--- a/ucs-school-netlogon-user-logonscripts/debian/changelog
+++ b/ucs-school-netlogon-user-logonscripts/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-netlogon-user-logonscripts (13.0.2-2) unstable; urgency=low
+
+  * Bug #42997: added performance optimization for group objects
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Mon, 09 Oct 2017 12:34:49 +0200
+
 ucs-school-netlogon-user-logonscripts (13.0.2-1) unstable; urgency=low
 
   * Bug #42997: handle netlogon changes asynchronosly via a separate daemon
