--- a/ucs-school-radius-802.1x/debian/changelog
+++ b/ucs-school-radius-802.1x/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-radius-802.1x (5.0.1-5) unstable; urgency=low
+
+  * Bug #45490: fix traceback if stationId is not specified as CLI argument
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Mon, 09 Oct 2017 13:50:33 +0200
+
 ucs-school-radius-802.1x (5.0.1-4) unstable; urgency=low
 
   * Bug #44918: fixed comparison/detection of max priority group
