--- a/ucs-school-netlogon-user-logonscripts/debian/changelog
+++ b/ucs-school-netlogon-user-logonscripts/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-netlogon-user-logonscripts (13.0.2-4) unstable; urgency=low
+
+  * Bug #42997: fix utf-8 problems with SqliteQueue
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Mon, 09 Oct 2017 22:03:53 +0200
+
 ucs-school-netlogon-user-logonscripts (13.0.2-3) unstable; urgency=low
 
   * Bug #45301: fix icon index in Windows 10
