--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.17-67) unstable; urgency=low
+
+  * Bug #42130: deactivate check of shadowExpire attribute due to Bug #41574
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 11 Oct 2017 17:07:28 +0200
+
 ucs-test-ucsschool (3.0.17-66) unstable; urgency=low
 
   * Bug #45403: move 103_ucsschool_smbstatus_parser from 00_checks to
