--- a/ucs-school-umc-rooms/debian/changelog
+++ b/ucs-school-umc-rooms/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-rooms (14.0.0-4) unstable; urgency=medium
+
+  * Bug #45512: add standby animation during object modification
+
+ -- Florian Best <best@univention.de>  Thu, 12 Oct 2017 17:31:22 +0200
+
 ucs-school-umc-rooms (14.0.0-3) unstable; urgency=medium
 
   * Bug #36789: adapt search form to new UMC design
