--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,4 +1,10 @@
-ucs-test-ucsschool (4.0.4-31.1) unstable; urgency=low
+ucs-test-ucsschool (4.0.4-33) unstable; urgency=low
+
+  * Bug #45467: adaptions for new deletion behavior of ucs-school-user-import
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Sat, 14 Oct 2017 23:40:54 +0200
+
+ucs-test-ucsschool (4.0.4-32) unstable; urgency=low
 
   * Bug #44993: adapt test to import permission fix
   * set timeout to default
