--- a/ucs-school-netlogon-user-logonscripts/debian/changelog
+++ b/ucs-school-netlogon-user-logonscripts/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-netlogon-user-logonscripts (13.0.2-6) unstable; urgency=low
+
+  * Bug #45301: make raising the icon index in win10 optional (adds
+    UCRV ucsschool/userlogon/fix-win10-icon-offset)
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 16 Oct 2017 09:27:24 +0200
+
 ucs-school-netlogon-user-logonscripts (13.0.2-5) unstable; urgency=low
 
   * Bug #42997: fix utf-8 problems with SqliteQueue
