--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (15.0.2-2) unstable; urgency=medium
+
+  * Bug #45023: fix typo
+
+ -- Florian Best <best@univention.de>  Mon, 16 Oct 2017 12:08:30 +0200
+
 ucs-school-import (15.0.2-1) unstable; urgency=low
 
   * Bug #45467: overhauled deletion behaviour of ucs-school-user-import
