--- a/ucs-school-netlogon-user-logonscripts/debian/changelog
+++ b/ucs-school-netlogon-user-logonscripts/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-netlogon-user-logonscripts (13.0.2-8) unstable; urgency=low
+
+  * Bug #45301: readd quotation marks for unmodified paths
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 16 Oct 2017 12:10:53 +0200
+
 ucs-school-netlogon-user-logonscripts (13.0.2-7) unstable; urgency=low
 
   * Bug #45301: fix whitespace, ignore case of path
