--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-import (14.0.16-49) unstable; urgency=low
+
+  * Bug #45553: ImportUser.make_email() now honors
+    config[mandatory_attributes] again
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 17 Oct 2017 10:30:51 +0200
+
 ucs-school-import (14.0.16-48) unstable; urgency=medium
 
   * Bug #45463: Create (or move) existing DHCP server for administrative DC
