--- a/ucs-school-netlogon-user-logonscripts/debian/changelog
+++ b/ucs-school-netlogon-user-logonscripts/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-netlogon-user-logonscripts (13.0.2-12) unstable; urgency=low
+
+  * Bug #45544: remove unnecessary wait() (and prevent potential deadlock in
+    wait() with stdout/err=PIPE)
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 17 Oct 2017 16:23:28 +0200
+
 ucs-school-netlogon-user-logonscripts (13.0.2-11) unstable; urgency=low
 
   * Bug #45544: completely reset state when doing a module resync
