--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (14.0.16-40) unstable; urgency=low
+
+  * Bug #45553: revert typo from 0c26711e
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 18 Oct 2017 15:17:41 +0200
+
 ucs-school-import (14.0.16-49) unstable; urgency=low
 
   * Bug #45553: ImportUser.make_email() now honors
