--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-38) unstable; urgency=low
+
+  * Bug #45524: fix AttributeError
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 23 Oct 2017 19:00:51 +0200
+
 ucs-test-ucsschool (4.0.4-37) unstable; urgency=low
 
   * Bug #45524: fix TypeError
