--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-39) unstable; urgency=low
+
+  * Bug #45577: add test for changeable username length
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 24 Oct 2017 14:51:23 +0200
+
 ucs-test-ucsschool (4.0.4-38) unstable; urgency=low
 
   * Bug #45524: fix AttributeError
