--- a/ucs-school-umc-import/debian/changelog
+++ b/ucs-school-umc-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-import (0.0.0-10) unstable; urgency=low
+
+  * Bug #45045: bump
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 01 Nov 2017 15:26:43 +0100
+
 ucs-school-umc-import (0.0.0-9) unstable; urgency=medium
 
   * Bug #45023: handle HTTP 404 error if the API server is not installed
