--- a/ucs-school-umc-distribution/debian/changelog
+++ b/ucs-school-umc-distribution/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-distribution (15.0.1-3) unstable; urgency=low
+
+  * Bug #45572: don't collect teachers own data
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 03 Nov 2017 13:44:22 +0100
+
 ucs-school-umc-distribution (15.0.1-2) unstable; urgency=medium
 
   * Bug #36789: adapt search form to new UMC design
