--- a/ucs-school-umc-distribution/debian/changelog
+++ b/ucs-school-umc-distribution/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-distribution (14.0.2-4) unstable; urgency=low
+
+  * Bug #45645: don't collect teachers own data
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 03 Nov 2017 15:34:29 +0100
+
 ucs-school-umc-distribution (14.0.2-3) unstable; urgency=low
 
   * Bug #41252: use symbol from python lib instead of number
