--- a/ucs-school-umc-import/debian/changelog
+++ b/ucs-school-umc-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-import (0.0.0-11) unstable; urgency=medium
+
+  * Bug #45664: fix missing UCR integration
+
+ -- Florian Best <best@univention.de>  Tue, 07 Nov 2017 16:07:24 +0100
+
 ucs-school-umc-import (0.0.0-10) unstable; urgency=low
 
   * Bug #45045: bump
