--- a/ucs-school-umc-distribution/debian/changelog
+++ b/ucs-school-umc-distribution/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-distribution (15.0.1-4) unstable; urgency=low
+
+  * Bug #45572: store and compare school roles instead of DNs
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 08 Nov 2017 12:19:29 +0100
+
 ucs-school-umc-distribution (15.0.1-3) unstable; urgency=low
 
   * Bug #45572: don't collect teachers own data
