--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (15.0.3-3) unstable; urgency=low
+
+  * Bug #45024: fix email address creation in test user creation script
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 10 Nov 2017 13:39:15 +0100
+
 ucs-school-import (15.0.3-2) unstable; urgency=medium
 
   * Bug #34727: make sure all import scripts are explicit affected
