--- a/ucs-school-umc-users/debian/changelog
+++ b/ucs-school-umc-users/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-users (13.0.0-5) unstable; urgency=medium
+
+  * Bug #42004: make checkbox which forces password change on next login configurable
+
+ -- Florian Best <best@univention.de>  Tue, 14 Nov 2017 13:52:15 +0100
+
 ucs-school-umc-users (13.0.0-4) unstable; urgency=medium
 
   * Bug #45468: use school models so that an UDM initialized UDM module is
