--- a/ucs-school-umc-import/debian/changelog
+++ b/ucs-school-umc-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-import (0.0.0-14) unstable; urgency=medium
+
+  * Bug #45660: fix querying import jobs after starting one
+
+ -- Florian Best <best@univention.de>  Wed, 15 Nov 2017 12:29:59 +0100
+
 ucs-school-umc-import (0.0.0-13) unstable; urgency=medium
 
   * Bug #45662: Don't rename the original filename
