Bug #45713: improve HTTP security

--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (15.0.3-4) unstable; urgency=medium
+
+  * Bug #45713: improve HTTP security
+
+ -- Florian Best <best@univention.de>  Wed, 15 Nov 2017 13:42:47 +0100
+
 ucs-school-import (15.0.3-3) unstable; urgency=low
 
   * Bug #45024: fix email address creation in test user creation script
