--- a/ucs-school-umc-import/debian/changelog
+++ b/ucs-school-umc-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-import (0.0.1-15) unstable; urgency=medium
+
+  * Bug #45717: use client library to return dynamic role selection
+
+ -- Florian Best <best@univention.de>  Wed, 15 Nov 2017 13:50:00 +0100
+
 ucs-school-umc-import (0.0.0-14) unstable; urgency=medium
 
   * Bug #45660: fix querying import jobs after starting one
