--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (15.0.3-5) unstable; urgency=medium
+
+  * Bug #45713: add HSTS
+
+ -- Florian Best <best@univention.de>  Wed, 15 Nov 2017 14:59:47 +0100
+
 ucs-school-import (15.0.3-4) unstable; urgency=medium
 
   * Bug #45717: add dummy backend implementation
