--- a/ucs-school-umc-distribution/debian/changelog
+++ b/ucs-school-umc-distribution/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-distribution (15.0.1-3) unstable; urgency=low
+
+  * Bug #45572: separate project distribution and collection directories
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 21 Nov 2017 16:02:03 +0100
+
 ucs-school-umc-distribution (15.0.1-2) unstable; urgency=medium
 
   * Bug #36789: adapt search form to new UMC design
