--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-41) unstable; urgency=low
+
+  * Bug #45577: add test for changeable maximum username length
+
+ -- Daniel Troeder <troeder@univention.de>  Thu, 23 Nov 2017 10:04:53 +0100
+
 ucs-test-ucsschool (4.0.4-40) unstable; urgency=medium
 
   * Bug #34727: adjust test scripts
