--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-42) unstable; urgency=low
+
+  * Bug #45679: add test to check no-overwrite attributes
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 24 Nov 2017 16:10:20 +0100
+
 ucs-test-ucsschool (4.0.4-41) unstable; urgency=low
 
   * Bug #45577: add test for changeable maximum username length
