--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-45) unstable; urgency=low
+
+  * Bug #45577: adapt test
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 06 Dec 2017 18:47:32 +0100
+
 ucs-test-ucsschool (4.0.4-44) unstable; urgency=low
 
   * Bug #45577: adapt test
