--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-import (15.0.3-15) unstable; urgency=low
+
+  * Bug #45577: remove unnecessary try-except, don't hard code default for
+    student username length
+
+ -- Daniel Troeder <troeder@univention.de>  Thu, 07 Dec 2017 15:16:22 +0100
+
 ucs-school-import (15.0.3-14) unstable; urgency=low
 
   * Bug #45577: username length hard limit is 20, for students 15
