--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-import (15.0.3-17) unstable; urgency=low
+
+  * Bug #45626: remove "<:umlauts>" from default configuration to lower the
+    chance of recordUID collisions
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 11 Dec 2017 11:21:14 +0100
+
 ucs-school-import (15.0.3-16) unstable; urgency=low
 
   * Bug #45679: updated UCR variable description
