--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test-ucsschool (4.0.4-46) unstable; urgency=low
+
+  * Bug #45572: fixed essential/distribution.py according to new directory
+    for results
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Mon, 11 Dec 2017 14:02:02 +0100
+
 ucs-test-ucsschool (4.0.4-45) unstable; urgency=low
 
   * Bug #45577: adapt test
