--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-47) unstable; urgency=low
+
+  * Bug #45577: add unit test for username length
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 11 Dec 2017 14:53:10 +0100
+
 ucs-test-ucsschool (4.0.4-46) unstable; urgency=low
 
   * Bug #45572: fixed essential/distribution.py according to new directory
