--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (15.0.3-18) unstable; urgency=low
+
+  * Bug #45577: fix typo
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 11 Dec 2017 16:01:05 +0100
+
 ucs-school-import (15.0.3-17) unstable; urgency=low
 
   * Bug #45626: remove "<:umlauts>" from default configuration to lower the
