--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test-ucsschool (4.0.4-48) unstable; urgency=low
+
+  * Bug #45250: fix school tests missing username in input data
+  * Bug #45250: fix school tests missing mail domain
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 12 Dec 2017 09:37:47 +0100
+
 ucs-test-ucsschool (4.0.4-47) unstable; urgency=low
 
   * Bug #45577: add unit test for username length
