--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-49) unstable; urgency=low
+
+  * Bug #45577: adapt tests to changes
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 13 Dec 2017 14:27:59 +0100
+
 ucs-test-ucsschool (4.0.4-48) unstable; urgency=low
 
   * Bug #45250: fix school tests missing username in input data
