--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-51) unstable; urgency=low
+
+  * Bug #45679: adapt test
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 18 Dec 2017 12:34:28 +0100
+
 ucs-test-ucsschool (4.0.4-50) unstable; urgency=low
 
   * Bug #45250: wait longer for UCR to be updated
