--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (15.0.3-21) unstable; urgency=low
+
+  * Bug #45972: fix self reference in schemes of legacy import
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 03 Jan 2018 12:11:04 +0100
+
 ucs-school-import (15.0.3-20) unstable; urgency=low
 
   * Bug #45679: prevent overwriting of attribute values by schema with new
