--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-52) unstable; urgency=low
+
+  * Bug #45524: fix format hooks test
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 03 Jan 2018 12:12:14 +0100
+
 ucs-test-ucsschool (4.0.4-51) unstable; urgency=low
 
   * Bug #45679: adapt test
