--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-54) unstable; urgency=low
+
+  * Bug #45972: test importing users with empty email scheme
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 12 Jan 2018 13:08:51 +0100
+
 ucs-test-ucsschool (4.0.4-53) unstable; urgency=low
 
   * Bug #45524: fix format hooks test
