--- a/ucs-school-info/debian/changelog
+++ b/ucs-school-info/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-info (8.0.0-1) unstable; urgency=medium
+
+  * bumped version
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 15 Jan 2018 13:17:47 +0100
+
 ucs-school-info (7.0.1-1) unstable; urgency=medium
 
   * Bug #45229: fix ucs-school-info
