--- a/ucs-school-branding/debian/changelog
+++ b/ucs-school-branding/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-branding (7.0.0-1) unstable; urgency=low
+
+  * bumped version
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 15 Jan 2018 13:17:47 +0100
+
 ucs-school-branding (6.0.0-1) unstable; urgency=low
 
   * version bump for UCS@school 4.2
