--- a/ucs-school-l10n-fr/debian/changelog
+++ b/ucs-school-l10n-fr/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-l10n-fr (3.0.0-1) unstable; urgency=medium
+
+  * bumped version
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 15 Jan 2018 13:17:47 +0100
+
 ucs-school-l10n-fr (2.0.0-9) unstable; urgency=medium
 
   * Bug #44698: fix umc-common install path
