--- a/ucs-school-old-homedirs/debian/changelog
+++ b/ucs-school-old-homedirs/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-old-homedirs (13.0.0-1) unstable; urgency=low
+
+  * bumped version
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 15 Jan 2018 13:17:47 +0100
+
 ucs-school-old-homedirs (12.0.0-1) unstable; urgency=low
 
   * Bug #43570: version bump for UCS@school 4.2
