--- a/ucs-school-umc-common/debian/changelog
+++ b/ucs-school-umc-common/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-common (8.0.0-1) unstable; urgency=medium
+
+  * bumped version
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 15 Jan 2018 13:17:48 +0100
+
 ucs-school-umc-common (7.0.0-2) unstable; urgency=medium
 
   * Bug #43731: correct build options
