--- a/ucs-school-umc-lessontimes/debian/changelog
+++ b/ucs-school-umc-lessontimes/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-lessontimes (6.0.0-1) unstable; urgency=medium
+
+  * bumped version
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 15 Jan 2018 13:17:48 +0100
+
 ucs-school-umc-lessontimes (5.0.1-1) unstable; urgency=medium
 
   * Bug #36789: adjust header buttons to new UMC design; applied patch
