--- a/univention-management-console-module-selective-udm/debian/changelog
+++ b/univention-management-console-module-selective-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-selective-udm (7.0.0-1) unstable; urgency=medium
+
+  * bumped version
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 15 Jan 2018 13:17:22 +0100
+
 univention-management-console-module-selective-udm (6.0.0-2) unstable; urgency=medium
 
   * Bug #45708: add information if object already exists
